workspace/compiler/tests/snapshots/test_snap_nix__nix_render_typed_fns_w40.snap
---
source: workspace/compiler/tests/snap_nix.rs
expression: rendered
---
// <unrendered module>

/**
  Apply a polymorphic function to a value (generic type variables).
*/
# Type :: a -> a -> b -> b
applyTo = x: f: null;

/**
  Nix built-in functions (the `builtins` set).
*/
// <unrendered module>

# Type :: Null
abort = null;

# Type :: Null
add = null;

# Type :: Null
all = null;

# Type :: Null
any = null;

# Type :: Null
appendContext = null;

# Type :: Null
attrNames = null;

# Type :: Null
attrValues = null;

# Type :: Null
baseNameOf = null;

# Type :: Null
bitAnd = null;

# Type :: Null
bitOr = null;

# Type :: Null
bitXor = null;

# Type :: Null
catAttrs = null;

# Type :: Null
ceil = null;

# Type :: Null
compareVersions = null;

# Type :: Null
concatLists = null;

# Type :: Null
concatMap = null;

# Type :: Null
concatStringsSep = null;

# Type :: Null
deepSeq = null;

# Type :: Null
dirOf = null;

# Type :: Null
div = null;

# Type :: Null
elem = null;

# Type :: Null
elemAt = null;

# Type :: Null
filter = null;

# Type :: Null
floor = null;

# Type :: Null
foldl' = null;

# Type :: Null
fromJSON = null;

# Type :: Null
fromTOML = null;

# Type :: Null
functionArgs = null;

# Type :: Null
genList = null;

# Type :: Null
genericClosure = null;

# Type :: Null
getAttr = null;

# Type :: Null
getContext = null;

# Type :: Null
groupBy = null;

# Type :: Null
hasAttr = null;

# Type :: Null
hasContext = null;

# Type :: Null
hashString = null;

# Type :: Null
head = null;

# Type :: Null
intersectAttrs = null;

# Type :: Null
isAttrs = null;

# Type :: Null
isBool = null;

# Type :: Null
isFloat = null;

# Type :: Null
isFunction = null;

# Type :: Null
isInt = null;

# Type :: Null
isList = null;

# Type :: Null
isNull = null;

# Type :: Null
isPath = null;

# Type :: Null
isString = null;

# Type :: Null
length = null;

# Type :: Null
lessThan = null;

# Type :: Null
listToAttrs = null;

# Type :: Null
map = null;

# Type :: Null
mapAttrs = null;

# Type :: Null
match = null;

# Type :: Null
mul = null;

# Type :: Null
parseDrvName = null;

# Type :: Null
partition = null;

# Type :: Null
removeAttrs = null;

# Type :: Null
replaceStrings = null;

# Type :: Null
seq = null;

# Type :: Null
sort = null;

# Type :: Null
split = null;

# Type :: Null
splitVersion = null;

# Type :: Null
stringLength = null;

# Type :: Null
sub = null;

# Type :: Null
substring = null;

# Type :: Null
tail = null;

# Type :: Null
throw = null;

# Type :: Null
toJSON = null;

# Type :: Null
toPath = null;

# Type :: Null
toString = null;

# Type :: Null
toXML = null;

# Type :: Null
trace = null;

# Type :: Null
tryEval = null;

# Type :: Null
typeOf = null;

# Type :: Null
zipAttrsWith = null;

/**
  Look up a key in an attribute set, returning null when absent.
*/
# Type :: String -> AttrSet -> String?
getOr = key: set: null;

/**
  No type annotation at all — exercises the untyped path.
*/
# Type :: Null
identity = x: null;

/**
  Check whether a number is positive.
*/
# Type :: Int -> Bool
isPositive = n: null;

/**
  Join a list of strings with a separator.
*/
# Type :: String -> [String] -> String
joinWith = sep: parts: null;

/**
  Build a package from a closed record of metadata.
*/
# Type :: String -> String -> Path -> Derivation
mkPackage = name: version: src: null;

// <unrendered constant>

// <unrendered constant>

// <unrendered constant>

// <unrendered constant>

/**
  Build a package from an open record (unknown extra keys allowed).
*/
# Type :: String -> String -> Derivation
mkPackageOpen = {
    name,
    version ? null,
    ...,
    ...,
}: null;

// <unrendered constant>

// <unrendered constant>

// <unrendered constant>

/**
  Transform every value in an attribute set by applying f.
*/
# Type :: String -> a -> b -> AttrSet a -> AttrSet b
transformAttrs = f: attrs: null;

// <unrendered constant>

// <unrendered constant>
